src/pywbem/parser.out
Created by PLY version 3.0 (http://www.dabeaz.com/ply)

Grammar

Rule 1     S' -> mofSpecification
Rule 2     mofSpecification -> mofProductionList
Rule 3     mofProductionList -> empty
Rule 4     mofProductionList -> mofProductionList mofProduction
Rule 5     mofProduction -> compilerDirective
Rule 6     mofProduction -> mp_createClass
Rule 7     mofProduction -> mp_setQualifier
Rule 8     mofProduction -> mp_createInstance
Rule 9     mp_createClass -> classDeclaration
Rule 10    mp_createClass -> assocDeclaration
Rule 11    mp_createClass -> indicDeclaration
Rule 12    mp_createInstance -> instanceDeclaration
Rule 13    mp_setQualifier -> qualifierDeclaration
Rule 14    compilerDirective -> # PRAGMA pragmaName ( pragmaParameter )
Rule 15    pragmaName -> identifier
Rule 16    pragmaParameter -> stringValue
Rule 17    classDeclaration -> CLASS className { classFeatureList } ;
Rule 18    classDeclaration -> CLASS className superClass { classFeatureList } ;
Rule 19    classDeclaration -> CLASS className alias { classFeatureList } ;
Rule 20    classDeclaration -> CLASS className alias superClass { classFeatureList } ;
Rule 21    classDeclaration -> qualifierList CLASS className { classFeatureList } ;
Rule 22    classDeclaration -> qualifierList CLASS className superClass { classFeatureList } ;
Rule 23    classDeclaration -> qualifierList CLASS className alias { classFeatureList } ;
Rule 24    classDeclaration -> qualifierList CLASS className alias superClass { classFeatureList } ;
Rule 25    classFeatureList -> empty
Rule 26    classFeatureList -> classFeatureList classFeature
Rule 27    assocDeclaration -> [ ASSOCIATION qualifierListEmpty ] CLASS className { associationFeatureList } ;
Rule 28    assocDeclaration -> [ ASSOCIATION qualifierListEmpty ] CLASS className superClass { associationFeatureList } ;
Rule 29    assocDeclaration -> [ ASSOCIATION qualifierListEmpty ] CLASS className alias { associationFeatureList } ;
Rule 30    assocDeclaration -> [ ASSOCIATION qualifierListEmpty ] CLASS className alias superClass { associationFeatureList } ;
Rule 31    indicDeclaration -> [ INDICATION qualifierListEmpty ] CLASS className { classFeatureList } ;
Rule 32    indicDeclaration -> [ INDICATION qualifierListEmpty ] CLASS className superClass { classFeatureList } ;
Rule 33    indicDeclaration -> [ INDICATION qualifierListEmpty ] CLASS className alias { classFeatureList } ;
Rule 34    indicDeclaration -> [ INDICATION qualifierListEmpty ] CLASS className alias superClass { classFeatureList } ;
Rule 35    qualifierListEmpty -> empty
Rule 36    qualifierListEmpty -> qualifierListEmpty , qualifier
Rule 37    associationFeatureList -> empty
Rule 38    associationFeatureList -> associationFeatureList associationFeature
Rule 39    className -> identifier
Rule 40    alias -> AS aliasIdentifier
Rule 41    aliasIdentifier -> $ identifier
Rule 42    superClass -> : className
Rule 43    classFeature -> propertyDeclaration
Rule 44    classFeature -> methodDeclaration
Rule 45    classFeature -> referenceDeclaration
Rule 46    associationFeature -> classFeature
Rule 47    qualifierList -> [ qualifier qualifierListEmpty ]
Rule 48    qualifier -> qualifierName
Rule 49    qualifier -> qualifierName : flavorList
Rule 50    qualifier -> qualifierName qualifierParameter
Rule 51    qualifier -> qualifierName qualifierParameter : flavorList
Rule 52    flavorList -> flavor
Rule 53    flavorList -> flavorList flavor
Rule 54    qualifierParameter -> ( constantValue )
Rule 55    qualifierParameter -> arrayInitializer
Rule 56    flavor -> ENABLEOVERRIDE
Rule 57    flavor -> DISABLEOVERRIDE
Rule 58    flavor -> RESTRICTED
Rule 59    flavor -> TOSUBCLASS
Rule 60    flavor -> TRANSLATABLE
Rule 61    propertyDeclaration -> propertyDeclaration_1
Rule 62    propertyDeclaration -> propertyDeclaration_2
Rule 63    propertyDeclaration -> propertyDeclaration_3
Rule 64    propertyDeclaration -> propertyDeclaration_4
Rule 65    propertyDeclaration -> propertyDeclaration_5
Rule 66    propertyDeclaration -> propertyDeclaration_6
Rule 67    propertyDeclaration -> propertyDeclaration_7
Rule 68    propertyDeclaration -> propertyDeclaration_8
Rule 69    propertyDeclaration_1 -> dataType propertyName ;
Rule 70    propertyDeclaration_2 -> dataType propertyName defaultValue ;
Rule 71    propertyDeclaration_3 -> dataType propertyName array ;
Rule 72    propertyDeclaration_4 -> dataType propertyName array defaultValue ;
Rule 73    propertyDeclaration_5 -> qualifierList dataType propertyName ;
Rule 74    propertyDeclaration_6 -> qualifierList dataType propertyName defaultValue ;
Rule 75    propertyDeclaration_7 -> qualifierList dataType propertyName array ;
Rule 76    propertyDeclaration_8 -> qualifierList dataType propertyName array defaultValue ;
Rule 77    referenceDeclaration -> objectRef referenceName ;
Rule 78    referenceDeclaration -> objectRef referenceName defaultValue ;
Rule 79    referenceDeclaration -> qualifierList objectRef referenceName ;
Rule 80    referenceDeclaration -> qualifierList objectRef referenceName defaultValue ;
Rule 81    methodDeclaration -> dataType methodName ( ) ;
Rule 82    methodDeclaration -> dataType methodName ( parameterList ) ;
Rule 83    methodDeclaration -> qualifierList dataType methodName ( ) ;
Rule 84    methodDeclaration -> qualifierList dataType methodName ( parameterList ) ;
Rule 85    propertyName -> identifier
Rule 86    referenceName -> identifier
Rule 87    methodName -> identifier
Rule 88    dataType -> DT_UINT8
Rule 89    dataType -> DT_SINT8
Rule 90    dataType -> DT_UINT16
Rule 91    dataType -> DT_SINT16
Rule 92    dataType -> DT_UINT32
Rule 93    dataType -> DT_SINT32
Rule 94    dataType -> DT_UINT64
Rule 95    dataType -> DT_SINT64
Rule 96    dataType -> DT_REAL32
Rule 97    dataType -> DT_REAL64
Rule 98    dataType -> DT_CHAR16
Rule 99    dataType -> DT_STR
Rule 100   dataType -> DT_BOOL
Rule 101   dataType -> DT_DATETIME
Rule 102   objectRef -> className REF
Rule 103   parameterList -> parameter
Rule 104   parameterList -> parameterList , parameter
Rule 105   parameter -> parameter_1
Rule 106   parameter -> parameter_2
Rule 107   parameter -> parameter_3
Rule 108   parameter -> parameter_4
Rule 109   parameter_1 -> dataType parameterName
Rule 110   parameter_1 -> dataType parameterName array
Rule 111   parameter_2 -> qualifierList dataType parameterName
Rule 112   parameter_2 -> qualifierList dataType parameterName array
Rule 113   parameter_3 -> objectRef parameterName
Rule 114   parameter_3 -> objectRef parameterName array
Rule 115   parameter_4 -> qualifierList objectRef parameterName
Rule 116   parameter_4 -> qualifierList objectRef parameterName array
Rule 117   parameterName -> identifier
Rule 118   array -> [ ]
Rule 119   array -> [ integerValue ]
Rule 120   defaultValue -> = initializer
Rule 121   initializer -> constantValue
Rule 122   initializer -> arrayInitializer
Rule 123   initializer -> referenceInitializer
Rule 124   arrayInitializer -> { constantValueList }
Rule 125   arrayInitializer -> { }
Rule 126   constantValueList -> constantValue
Rule 127   constantValueList -> constantValueList , constantValue
Rule 128   stringValueList -> stringValue
Rule 129   stringValueList -> stringValueList stringValue
Rule 130   constantValue -> integerValue
Rule 131   constantValue -> floatValue
Rule 132   constantValue -> charValue
Rule 133   constantValue -> stringValueList
Rule 134   constantValue -> booleanValue
Rule 135   constantValue -> nullValue
Rule 136   integerValue -> binaryValue
Rule 137   integerValue -> octalValue
Rule 138   integerValue -> decimalValue
Rule 139   integerValue -> hexValue
Rule 140   referenceInitializer -> objectHandle
Rule 141   referenceInitializer -> aliasIdentifier
Rule 142   objectHandle -> identifier
Rule 143   qualifierDeclaration -> QUALIFIER qualifierName qualifierType scope ;
Rule 144   qualifierDeclaration -> QUALIFIER qualifierName qualifierType scope defaultFlavor ;
Rule 145   qualifierName -> identifier
Rule 146   qualifierName -> ASSOCIATION
Rule 147   qualifierName -> INDICATION
Rule 148   qualifierType -> qualifierType_1
Rule 149   qualifierType -> qualifierType_2
Rule 150   qualifierType_1 -> : dataType array
Rule 151   qualifierType_1 -> : dataType array defaultValue
Rule 152   qualifierType_2 -> : dataType
Rule 153   qualifierType_2 -> : dataType defaultValue
Rule 154   scope -> , SCOPE ( metaElementList )
Rule 155   metaElementList -> metaElement
Rule 156   metaElementList -> metaElementList , metaElement
Rule 157   metaElement -> SCHEMA
Rule 158   metaElement -> CLASS
Rule 159   metaElement -> ASSOCIATION
Rule 160   metaElement -> INDICATION
Rule 161   metaElement -> QUALIFIER
Rule 162   metaElement -> PROPERTY
Rule 163   metaElement -> REFERENCE
Rule 164   metaElement -> METHOD
Rule 165   metaElement -> PARAMETER
Rule 166   metaElement -> ANY
Rule 167   defaultFlavor -> , FLAVOR ( flavorListWithComma )
Rule 168   flavorListWithComma -> flavor
Rule 169   flavorListWithComma -> flavorListWithComma , flavor
Rule 170   instanceDeclaration -> INSTANCE OF className { valueInitializerList } ;
Rule 171   instanceDeclaration -> INSTANCE OF className alias { valueInitializerList } ;
Rule 172   instanceDeclaration -> qualifierList INSTANCE OF className { valueInitializerList } ;
Rule 173   instanceDeclaration -> qualifierList INSTANCE OF className alias { valueInitializerList } ;
Rule 174   valueInitializerList -> valueInitializer
Rule 175   valueInitializerList -> valueInitializerList valueInitializer
Rule 176   valueInitializer -> identifier defaultValue ;
Rule 177   valueInitializer -> qualifierList identifier defaultValue ;
Rule 178   booleanValue -> FALSE
Rule 179   booleanValue -> TRUE
Rule 180   nullValue -> NULL
Rule 181   identifier -> IDENTIFIER
Rule 182   identifier -> ANY
Rule 183   identifier -> AS
Rule 184   identifier -> CLASS
Rule 185   identifier -> DISABLEOVERRIDE
Rule 186   identifier -> dataType
Rule 187   identifier -> ENABLEOVERRIDE
Rule 188   identifier -> FLAVOR
Rule 189   identifier -> INSTANCE
Rule 190   identifier -> METHOD
Rule 191   identifier -> OF
Rule 192   identifier -> PARAMETER
Rule 193   identifier -> PRAGMA
Rule 194   identifier -> PROPERTY
Rule 195   identifier -> QUALIFIER
Rule 196   identifier -> REFERENCE
Rule 197   identifier -> RESTRICTED
Rule 198   identifier -> SCHEMA
Rule 199   identifier -> SCOPE
Rule 200   identifier -> TOSUBCLASS
Rule 201   identifier -> TRANSLATABLE
Rule 202   empty -> <empty>

Terminals, with rules where they appear

#                    : 13
$                    : 40
(                    : 13 53 80 81 82 83 153 166
)                    : 13 53 80 81 82 83 153 166
,                    : 35 103 126 153 155 166 168
:                    : 41 48 50 149 150 151 152
;                    : 16 17 18 19 20 21 22 23 26 27 28 29 30 31 32 33 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 142 143 169 170 171 172 175 176
=                    : 119
ANY                  : 165 181
AS                   : 39 182
ASSOCIATION          : 26 27 28 29 145 158
CLASS                : 16 17 18 19 20 21 22 23 26 27 28 29 30 31 32 33 157 183
DISABLEOVERRIDE      : 56 184
DT_BOOL              : 99
DT_CHAR16            : 97
DT_DATETIME          : 100
DT_REAL32            : 95
DT_REAL64            : 96
DT_SINT16            : 90
DT_SINT32            : 92
DT_SINT64            : 94
DT_SINT8             : 88
DT_STR               : 98
DT_UINT16            : 89
DT_UINT32            : 91
DT_UINT64            : 93
DT_UINT8             : 87
ENABLEOVERRIDE       : 55 186
FALSE                : 177
FLAVOR               : 166 187
IDENTIFIER           : 180
INDICATION           : 30 31 32 33 146 159
INSTANCE             : 169 170 171 172 188
METHOD               : 163 189
NULL                 : 179
OF                   : 169 170 171 172 190
PARAMETER            : 164 191
PRAGMA               : 13 192
PROPERTY             : 161 193
QUALIFIER            : 142 143 160 194
REF                  : 101
REFERENCE            : 162 195
RESTRICTED           : 57 196
SCHEMA               : 156 197
SCOPE                : 153 198
TOSUBCLASS           : 58 199
TRANSLATABLE         : 59 200
TRUE                 : 178
[                    : 26 27 28 29 30 31 32 33 46 117 118
]                    : 26 27 28 29 30 31 32 33 46 117 118
binaryValue          : 135
charValue            : 131
decimalValue         : 137
error                : 
floatValue           : 130
hexValue             : 138
octalValue           : 136
stringValue          : 15 127 128
{                    : 16 17 18 19 20 21 22 23 26 27 28 29 30 31 32 33 123 124 169 170 171 172
}                    : 16 17 18 19 20 21 22 23 26 27 28 29 30 31 32 33 123 124 169 170 171 172

Nonterminals, with rules where they appear

alias                : 18 19 22 23 28 29 32 33 170 172
aliasIdentifier      : 39 140
array                : 70 71 74 75 109 111 113 115 149 150
arrayInitializer     : 54 121
assocDeclaration     : 9
associationFeature   : 37
associationFeatureList : 26 27 28 29 37
booleanValue         : 133
classDeclaration     : 8
classFeature         : 25 45
classFeatureList     : 16 17 18 19 20 21 22 23 25 30 31 32 33
className            : 16 17 18 19 20 21 22 23 26 27 28 29 30 31 32 33 41 101 169 170 171 172
compilerDirective    : 4
constantValue        : 53 120 125 126
constantValueList    : 123 126
dataType             : 68 69 70 71 72 73 74 75 80 81 82 83 108 109 110 111 149 150 151 152 185
defaultFlavor        : 143
defaultValue         : 69 71 73 75 77 79 150 152 175 176
empty                : 2 24 34 36
flavor               : 51 52 167 168
flavorList           : 48 50 52
flavorListWithComma  : 166 168
identifier           : 14 38 40 84 85 86 116 141 144 175 176
indicDeclaration     : 10
initializer          : 119
instanceDeclaration  : 11
integerValue         : 118 129
metaElement          : 154 155
metaElementList      : 153 155
methodDeclaration    : 43
methodName           : 80 81 82 83
mofProduction        : 3
mofProductionList    : 1 3
mofSpecification     : 0
mp_createClass       : 5
mp_createInstance    : 7
mp_setQualifier      : 6
nullValue            : 134
objectHandle         : 139
objectRef            : 76 77 78 79 112 113 114 115
parameter            : 102 103
parameterList        : 81 83 103
parameterName        : 108 109 110 111 112 113 114 115
parameter_1          : 104
parameter_2          : 105
parameter_3          : 106
parameter_4          : 107
pragmaName           : 13
pragmaParameter      : 13
propertyDeclaration  : 42
propertyDeclaration_1 : 60
propertyDeclaration_2 : 61
propertyDeclaration_3 : 62
propertyDeclaration_4 : 63
propertyDeclaration_5 : 64
propertyDeclaration_6 : 65
propertyDeclaration_7 : 66
propertyDeclaration_8 : 67
propertyName         : 68 69 70 71 72 73 74 75
qualifier            : 35 46
qualifierDeclaration : 12
qualifierList        : 20 21 22 23 72 73 74 75 78 79 82 83 110 111 114 115 171 172 176
qualifierListEmpty   : 26 27 28 29 30 31 32 33 35 46
qualifierName        : 47 48 49 50 142 143
qualifierParameter   : 49 50
qualifierType        : 142 143
qualifierType_1      : 147
qualifierType_2      : 148
referenceDeclaration : 44
referenceInitializer : 122
referenceName        : 76 77 78 79
scope                : 142 143
stringValueList      : 128 132
superClass           : 17 19 21 23 27 29 31 33
valueInitializer     : 173 174
valueInitializerList : 169 170 171 172 174

Parsing method: LALR

state 0

    (0) S' -> . mofSpecification
    (1) mofSpecification -> . mofProductionList
    (2) mofProductionList -> . empty
    (3) mofProductionList -> . mofProductionList mofProduction
    (201) empty -> .

    #               reduce using rule 201 (empty -> .)
    CLASS           reduce using rule 201 (empty -> .)
    [               reduce using rule 201 (empty -> .)
    QUALIFIER       reduce using rule 201 (empty -> .)
    INSTANCE        reduce using rule 201 (empty -> .)
    $end            reduce using rule 201 (empty -> .)

    mofSpecification               shift and go to state 1
    empty                          shift and go to state 2
    mofProductionList              shift and go to state 3

state 1

    (0) S' -> mofSpecification .



state 2

    (2) mofProductionList -> empty .

    #               reduce using rule 2 (mofProductionList -> empty .)
    CLASS           reduce using rule 2 (mofProductionList -> empty .)
    [               reduce using rule 2 (mofProductionList -> empty .)
    QUALIFIER       reduce using rule 2 (mofProductionList -> empty .)
    INSTANCE        reduce using rule 2 (mofProductionList -> empty .)
    $end            reduce using rule 2 (mofProductionList -> empty .)


state 3

    (1) mofSpecification -> mofProductionList .
    (3) mofProductionList -> mofProductionList . mofProduction
    (4) mofProduction -> . compilerDirective
    (5) mofProduction -> . mp_createClass
    (6) mofProduction -> . mp_setQualifier
    (7) mofProduction -> . mp_createInstance
    (13) compilerDirective -> . # PRAGMA pragmaName ( pragmaParameter )
    (8) mp_createClass -> . classDeclaration
    (9) mp_createClass -> . assocDeclaration
    (10) mp_createClass -> . indicDeclaration
    (12) mp_setQualifier -> . qualifierDeclaration
    (11) mp_createInstance -> . instanceDeclaration
    (16) classDeclaration -> . CLASS className { classFeatureList } ;
    (17) classDeclaration -> . CLASS className superClass { classFeatureList } ;
    (18) classDeclaration -> . CLASS className alias { classFeatureList } ;
    (19) classDeclaration -> . CLASS className alias superClass { classFeatureList } ;
    (20) classDeclaration -> . qualifierList CLASS className { classFeatureList } ;
    (21) classDeclaration -> . qualifierList CLASS className superClass { classFeatureList } ;
    (22) classDeclaration -> . qualifierList CLASS className alias { classFeatureList } ;
    (23) classDeclaration -> . qualifierList CLASS className alias superClass { classFeatureList } ;
    (26) assocDeclaration -> . [ ASSOCIATION qualifierListEmpty ] CLASS className { associationFeatureList } ;
    (27) assocDeclaration -> . [ ASSOCIATION qualifierListEmpty ] CLASS className superClass { associationFeatureList } ;
    (28) assocDeclaration -> . [ ASSOCIATION qualifierListEmpty ] CLASS className alias { associationFeatureList } ;
    (29) assocDeclaration -> . [ ASSOCIATION qualifierListEmpty ] CLASS className alias superClass { associationFeatureList } ;
    (30) indicDeclaration -> . [ INDICATION qualifierListEmpty ] CLASS className { classFeatureList } ;
    (31) indicDeclaration -> . [ INDICATION qualifierListEmpty ] CLASS className superClass { classFeatureList } ;
    (32) indicDeclaration -> . [ INDICATION qualifierListEmpty ] CLASS className alias { classFeatureList } ;
    (33) indicDeclaration -> . [ INDICATION qualifierListEmpty ] CLASS className alias superClass { classFeatureList } ;
    (142) qualifierDeclaration -> . QUALIFIER qualifierName qualifierType scope ;
    (143) qualifierDeclaration -> . QUALIFIER qualifierName qualifierType scope defaultFlavor ;
    (169) instanceDeclaration -> . INSTANCE OF className { valueInitializerList } ;
    (170) instanceDeclaration -> . INSTANCE OF className alias { valueInitializerList } ;
    (171) instanceDeclaration -> . qualifierList INSTANCE OF className { valueInitializerList } ;
    (172) instanceDeclaration -> . qualifierList INSTANCE OF className alias { valueInitializerList } ;
    (46) qualifierList -> . [ qualifier qualifierListEmpty ]

    $end            reduce using rule 1 (mofSpecification -> mofProductionList .)
    #               shift and go to state 6
    CLASS           shift and go to state 11
    [               shift and go to state 14
    QUALIFIER       shift and go to state 16
    INSTANCE        shift and go to state 8

    qualifierDeclaration           shift and go to state 4
    mp_createClass                 shift and go to state 5
    mp_createInstance              shift and go to state 7
    indicDeclaration               shift and go to state 9
    compilerDirective              shift and go to state 10
    instanceDeclaration            shift and go to state 12
    classDeclaration               shift and go to state 13
    mofProduction                  shift and go to state 15
    mp_setQualifier                shift and go to state 17
    assocDeclaration               shift and go to state 18
    qualifierList                  shift and go to state 19

state 4

    (12) mp_setQualifier -> qualifierDeclaration .

    #               reduce using rule 12 (mp_setQualifier -> qualifierDeclaration .)
    CLASS           reduce using rule 12 (mp_setQualifier -> qualifierDeclaration .)
    [               reduce using rule 12 (mp_setQualifier -> qualifierDeclaration .)
    QUALIFIER       reduce using rule 12 (mp_setQualifier -> qualifierDeclaration .)
    INSTANCE        reduce using rule 12 (mp_setQualifier -> qualifierDeclaration .)
    $end            reduce using rule 12 (mp_setQualifier -> qualifierDeclaration .)


state 5

    (5) mofProduction -> mp_createClass .

    #               reduce using rule 5 (mofProduction -> mp_createClass .)
    CLASS           reduce using rule 5 (mofProduction -> mp_createClass .)
    [               reduce using rule 5 (mofProduction -> mp_createClass .)
    QUALIFIER       reduce using rule 5 (mofProduction -> mp_createClass .)
    INSTANCE        reduce using rule 5 (mofProduction -> mp_createClass .)
    $end            reduce using rule 5 (mofProduction -> mp_createClass .)


state 6

    (13) compilerDirective -> # . PRAGMA pragmaName ( pragmaParameter )

    PRAGMA          shift and go to state 20


state 7

    (7) mofProduction -> mp_createInstance .

    #               reduce using rule 7 (mofProduction -> mp_createInstance .)
    CLASS           reduce using rule 7 (mofProduction -> mp_createInstance .)
    [               reduce using rule 7 (mofProduction -> mp_createInstance .)
    QUALIFIER       reduce using rule 7 (mofProduction -> mp_createInstance .)
    INSTANCE        reduce using rule 7 (mofProduction -> mp_createInstance .)
    $end            reduce using rule 7 (mofProduction -> mp_createInstance .)


state 8

    (169) instanceDeclaration -> INSTANCE . OF className { valueInitializerList } ;
    (170) instanceDeclaration -> INSTANCE . OF className alias { valueInitializerList } ;

    OF              shift and go to state 21


state 9

    (10) mp_createClass -> indicDeclaration .

    #               reduce using rule 10 (mp_createClass -> indicDeclaration .)
    CLASS           reduce using rule 10 (mp_createClass -> indicDeclaration .)
    [               reduce using rule 10 (mp_createClass -> indicDeclaration .)
    QUALIFIER       reduce using rule 10 (mp_createClass -> indicDeclaration .)
    INSTANCE        reduce using rule 10 (mp_createClass -> indicDeclaration .)
    $end            reduce using rule 10 (mp_createClass -> indicDeclaration .)


state 10

    (4) mofProduction -> compilerDirective .

    #               reduce using rule 4 (mofProduction -> compilerDirective .)
    CLASS           reduce using rule 4 (mofProduction -> compilerDirective .)
    [               reduce using rule 4 (mofProduction -> compilerDirective .)
    QUALIFIER       reduce using rule 4 (mofProduction -> compilerDirective .)
    INSTANCE        reduce using rule 4 (mofProduction -> compilerDirective .)
    $end            reduce using rule 4 (mofProduction -> compilerDirective .)


state 11

    (16) classDeclaration -> CLASS . className { classFeatureList } ;
    (17) classDeclaration -> CLASS . className superClass { classFeatureList } ;
    (18) classDeclaration -> CLASS . className alias { classFeatureList } ;
    (19) classDeclaration -> CLASS . className alias superClass { classFeatureList } ;
    (38) className -> . identifier
    (180) identifier -> . IDENTIFIER
    (181) identifier -> . ANY
    (182) identifier -> . AS
    (183) identifier -> . CLASS
    (184) identifier -> . DISABLEOVERRIDE
    (185) identifier -> . dataType
    (186) identifier -> . ENABLEOVERRIDE
    (187) identifier -> . FLAVOR
    (188) identifier -> . INSTANCE
    (189) identifier -> . METHOD
    (190) identifier -> . OF
    (191) identifier -> . PARAMETER
    (192) identifier -> . PRAGMA
    (193) identifier -> . PROPERTY
    (194) identifier -> . QUALIFIER
    (195) identifier -> . REFERENCE
    (196) identifier -> . RESTRICTED
    (197) identifier -> . SCHEMA
    (198) identifier -> . SCOPE
    (199) identifier -> . TOSUBCLASS
    (200) identifier -> . TRANSLATABLE
    (87) dataType -> . DT_UINT8
    (88) dataType -> . DT_SINT8
    (89) dataType -> . DT_UINT16
    (90) dataType -> . DT_SINT16
    (91) dataType -> . DT_UINT32
    (92) dataType -> . DT_SINT32
    (93) dataType -> . DT_UINT64
    (94) dataType -> . DT_SINT64
    (95) dataType -> . DT_REAL32
    (96) dataType -> . DT_REAL64
    (97) dataType -> . DT_CHAR16
    (98) dataType -> . DT_STR
    (99) dataType -> . DT_BOOL
    (100) dataType -> . DT_DATETIME

    IDENTIFIER      shift and go to state 35
    ANY             shift and go to state 58
    AS              shift and go to state 42
    CLASS           shift and go to state 54
    DISABLEOVERRIDE shift and go to state 23
    ENABLEOVERRIDE  shift and go to state 50
    FLAVOR          shift and go to state 46
    INSTANCE        shift and go to state 56
    METHOD          shift and go to state 36
    OF              shift and go to state 53
    PARAMETER       shift and go to state 27
    PRAGMA          shift and go to state 44
    PROPERTY        shift and go to state 57
    QUALIFIER       shift and go to state 51
    REFERENCE       shift and go to state 29
    RESTRICTED      shift and go to state 30
    SCHEMA          shift and go to state 37
    SCOPE           shift and go to state 45
    TOSUBCLASS      shift and go to state 26
    TRANSLATABLE    shift and go to state 32
    DT_UINT8        shift and go to state 22
    DT_SINT8        shift and go to state 34
    DT_UINT16       shift and go to state 40
    DT_SINT16       shift and go to state 41
    DT_UINT32       shift and go to state 33
    DT_SINT32       shift and go to state 43
    DT_UINT64       shift and go to state 52
    DT_SINT64       shift and go to state 25
    DT_REAL32       shift and go to state 48
    DT_REAL64       shift and go to state 31
    DT_CHAR16       shift and go to state 47
    DT_STR          shift and go to state 24
    DT_BOOL         shift and go to state 49
    DT_DATETIME     shift and go to state 28

    dataType                       shift and go to state 39
    className                      shift and go to state 55
    identifier                     shift and go to state 38

state 12

    (11) mp_createInstance -> instanceDeclaration .

    #               reduce using rule 11 (mp_createInstance -> instanceDeclaration .)
    CLASS           reduce using rule 11 (mp_createInstance -> instanceDeclaration .)
    [               reduce using rule 11 (mp_createInstance -> instanceDeclaration .)
    QUALIFIER       reduce using rule 11 (mp_createInstance -> instanceDeclaration .)
    INSTANCE        reduce using rule 11 (mp_createInstance -> instanceDeclaration .)
    $end            reduce using rule 11 (mp_createInstance -> instanceDeclaration .)


state 13

    (8) mp_createClass -> classDeclaration .

    #               reduce using rule 8 (mp_createClass -> classDeclaration .)
    CLASS           reduce using rule 8 (mp_createClass -> classDeclaration .)
    [               reduce using rule 8 (mp_createClass -> classDeclaration .)
    QUALIFIER       reduce using rule 8 (mp_createClass -> classDeclaration .)
    INSTANCE        reduce using rule 8 (mp_createClass -> classDeclaration .)
    $end            reduce using rule 8 (mp_createClass -> classDeclaration .)


state 14

    (26) assocDeclaration -> [ . ASSOCIATION qualifierListEmpty ] CLASS className { associationFeatureList } ;
    (27) assocDeclaration -> [ . ASSOCIATION qualifierListEmpty ] CLASS className superClass { associationFeatureList } ;
    (28) assocDeclaration -> [ . ASSOCIATION qualifierListEmpty ] CLASS className alias { associationFeatureList } ;
    (29) assocDeclaration -> [ . ASSOCIATION qualifierListEmpty ] CLASS className alias superClass { associationFeatureList } ;
    (30) indicDeclaration -> [ . INDICATION qualifierListEmpty ] CLASS className { classFeatureList } ;
    (31) indicDeclaration -> [ . INDICATION qualifierListEmpty ] CLASS className superClass { classFeatureList } ;
    (32) indicDeclaration -> [ . INDICATION qualifierListEmpty ] CLASS className alias { classFeatureList } ;
    (33) indicDeclaration -> [ . INDICATION qualifierListEmpty ] CLASS className alias superClass { classFeatureList } ;
    (46) qualifierList -> [ . qualifier qualifierListEmpty ]
    (47) qualifier -> . qualifierName
    (48) qualifier -> . qualifierName : flavorList
    (49) qualifier -> . qualifierName qualifierParameter
    (50) qualifier -> . qualifierName qualifierParameter : flavorList
    (144) qualifierName -> . identifier
    (145) qualifierName -> . ASSOCIATION
    (146) qualifierName -> . INDICATION
    (180) identifier -> . IDENTIFIER
    (181) identifier -> . ANY
    (182) identifier -> . AS
    (183) identifier -> . CLASS
    (184) identifier -> . DISABLEOVERRIDE
    (185) identifier -> . dataType
    (186) identifier -> . ENABLEOVERRIDE
    (187) identifier -> . FLAVOR
    (188) identifier -> . INSTANCE
    (189) identifier -> . METHOD
    (190) identifier -> . OF
    (191) identifier -> . PARAMETER
    (192) identifier -> . PRAGMA
    (193) identifier -> . PROPERTY
    (194) identifier -> . QUALIFIER
    (195) identifier -> . REFERENCE
    (196) identifier -> . RESTRICTED
    (197) identifier -> . SCHEMA
    (198) identifier -> . SCOPE
    (199) identifier -> . TOSUBCLASS
    (200) identifier -> . TRANSLATABLE
    (87) dataType -> . DT_UINT8
    (88) dataType -> . DT_SINT8
    (89) dataType -> . DT_UINT16
    (90) dataType -> . DT_SINT16
    (91) dataType -> . DT_UINT32
    (92) dataType -> . DT_SINT32
    (93) dataType -> . DT_UINT64
    (94) dataType -> . DT_SINT64
    (95) dataType -> . DT_REAL32
    (96) dataType -> . DT_REAL64
    (97) dataType -> . DT_CHAR16
    (98) dataType -> . DT_STR
    (99) dataType -> . DT_BOOL
    (100) dataType -> . DT_DATETIME

    ASSOCIATION     shift and go to state 60
    INDICATION      shift and go to state 62
    IDENTIFIER      shift and go to state 35
    ANY             shift and go to state 58
    AS              shift and go to state 42
    CLASS           shift and go to state 54
    DISABLEOVERRIDE shift and go to state 23
    ENABLEOVERRIDE  shift and go to state 50
    FLAVOR          shift and go to state 46
    INSTANCE        shift and go to state 56
    METHOD          shift and go to state 36
    OF              shift and go to state 53
    PARAMETER       shift and go to state 27
    PRAGMA          shift and go to state 44
    PROPERTY        shift and go to state 57
    QUALIFIER       shift and go to state 51
    REFERENCE       shift and go to state 29
    RESTRICTED      shift and go to state 30
    SCHEMA          shift and go to state 37
    SCOPE           shift and go to state 45
    TOSUBCLASS      shift and go to state 26
    TRANSLATABLE    shift and go to state 32
    DT_UINT8        shift and go to state 22
    DT_SINT8        shift and go to state 34
    DT_UINT16       shift and go to state 40
    DT_SINT16       shift and go to state 41
    DT_UINT32       shift and go to state 33
    DT_SINT32       shift and go to state 43
    DT_UINT64       shift and go to state 52
    DT_SINT64       shift and go to state 25
    DT_REAL32       shift and go to state 48
    DT_REAL64       shift and go to state 31
    DT_CHAR16       shift and go to state 47
    DT_STR          shift and go to state 24
    DT_BOOL         shift and go to state 49
    DT_DATETIME     shift and go to state 28

    identifier                     shift and go to state 63
    qualifier                      shift and go to state 61
    dataType                       shift and go to state 39
    qualifierName                  shift and go to state 59

state 15

    (3) mofProductionList -> mofProductionList mofProduction .

    #               reduce using rule 3 (mofProductionList -> mofProductionList mofProduction .)
    CLASS           reduce using rule 3 (mofProductionList -> mofProductionList mofProduction .)
    [               reduce using rule 3 (mofProductionList -> mofProductionList mofProduction .)
    QUALIFIER       reduce using rule 3 (mofProductionList -> mofProductionList mofProduction .)
    INSTANCE        reduce using rule 3 (mofProductionList -> mofProductionList mofProduction .)
    $end            reduce using rule 3 (mofProductionList -> mofProductionList mofProduction .)


state 16
